[gd_scene load_steps=3 format=3 uid="uid://ci1eafg421myg"]

[ext_resource type="Script" uid="uid://heu6wwwlplbs" path="res://Scripts/In-Out Warnings/suction_flap.gd" id="1_xo4y4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8w7o"]
size = Vector2(39, 38)

[node name="SuctionFlap" type="StaticBody2D"]
script = ExtResource("1_xo4y4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5258789e-05, -19.999996)
scale = Vector2(0.85, 0.85)
shape = SubResource("RectangleShape2D_o8w7o")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="FishColor" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -20.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 0

[node name="FlapTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="VisualTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="FlapTimer" to="." method="_on_flap_timer_timeout"]
[connection signal="timeout" from="VisualTimer" to="." method="_on_visual_timer_timeout"]
